test/bitwise2.slq

def main(){
	b:=1:𝔹;
	s:=1:int[16];
	u:=2:uint[16];
	sc:=1:!int[16];
	uc:=2:!uint[16];
	bc:=1:!𝔹;
	n:=3:!ℕ;
	z:=-3:!ℤ;
	q:=1/2:!ℚ;
	r:=4.5:!ℝ;
	// c:=0:!ℂ;

	bandb:=b&b:𝔹;
	(b&b):=bandb;
	bands:=b&s:int[16];
	(b&s):=bands;
	bandu:=b&u:uint[16];
	(b&u):=bandu;
	bandsc:=b&sc:int[16];
	(b&sc):=bandsc;
	banduc:=b&uc:uint[16];
	(b&uc):=banduc;
	bandbc:=b&bc:𝔹;
	(b&bc):=bandbc;
	bandn:=b&n:𝔹;
	(b&n):=bandn;
	bandz:=b&z:𝔹;
	(b&z):=bandz;
	bandq:=b&q; /// error
	(b&q):=bandq; /// error
	bandr:=b&r; /// error
	(b&r):=bandr; /// error
	sandb:=s&b:int[16];
	(s&b):=sandb;
	sands:=s&s:int[16];
	(s&s):=sands;
	sandu:=s&u; /// error
	(s&u):=sandu; /// error
	sandsc:=s&sc:int[16];
	(s&sc):=sandsc;
	sanduc:=s&uc; /// error
	(s&uc):=sanduc; /// error
	sandbc:=s&bc:int[16];
	(s&bc):=sandbc;
	sandn:=s&n:int[16];
	(s&n):=sandn;
	sandz:=s&z:int[16];
	(s&z):=sandz;
	sandq:=s&q; /// error
	(s&q):=sandq; /// error
	sandr:=s&r; /// error
	(s&r):=sandr; /// error
	uandb:=u&b:uint[16];
	(u&b):=uandb;
	uands:=u&s; /// error
	(u&s):=uands; /// error
	uandu:=u&u:uint[16];
	(u&u):=uandu;
	uandsc:=u&sc; /// error
	(u&sc):=uandsc; /// error
	uanduc:=u&uc:uint[16];
	(u&uc):=uanduc;
	uandbc:=u&bc:uint[16];
	(u&bc):=uandbc;
	uandn:=u&n:uint[16];
	(u&n):=uandn;
	uandz:=u&z:uint[16];
	(u&z):=uandz;
	uandq:=u&q; /// error
	(u&q):=uandq; /// error
	uandr:=u&r; /// error
	(u&r):=uandr; /// error
	scandb:=sc&b:int[16];
	(sc&b):=scandb;
	scands:=sc&s:int[16];
	(sc&s):=scands;
	scandu:=sc&u; /// error
	(sc&u):=scandu; /// error
	scandsc:=sc&sc:!int[16];
	(sc&sc):=scandsc;
	scanduc:=sc&uc; /// error
	(sc&uc):=scanduc; /// error
	scandbc:=sc&bc:!int[16];
	(sc&bc):=scandbc;
	scandn:=sc&n:!int[16];
	(sc&n):=scandn;
	scandz:=sc&z:!int[16];
	(sc&z):=scandz;
	scandq:=sc&q; /// error
	(sc&q):=scandq; /// error
	scandr:=sc&r; /// error
	(sc&r):=scandr; /// error
	ucandb:=uc&b:uint[16];
	(uc&b):=ucandb;
	ucands:=uc&s; /// error
	(uc&s):=ucands; /// error
	ucandu:=uc&u:uint[16];
	(uc&u):=ucandu;
	ucandsc:=uc&sc; /// error
	(uc&sc):=ucandsc; /// error
	ucanduc:=uc&uc:!uint[16];
	(uc&uc):=ucanduc;
	ucandbc:=uc&bc:!uint[16];
	(uc&bc):=ucandbc;
	ucandn:=uc&n:!uint[16];
	(uc&n):=ucandn;
	ucandz:=uc&z:!uint[16];
	(uc&z):=ucandz;
	ucandq:=uc&q; /// error
	(uc&q):=ucandq; /// error
	ucandr:=uc&r; /// error
	(uc&r):=ucandr; /// error
	bcandb:=bc&b:𝔹;
	(bc&b):=bcandb;
	bcands:=bc&s:int[16];
	(bc&s):=bcands;
	bcandu:=bc&u:uint[16];
	(bc&u):=bcandu;
	bcandsc:=bc&sc:!int[16];
	(bc&sc):=bcandsc;
	bcanduc:=bc&uc:!uint[16];
	(bc&uc):=bcanduc;
	bcandbc:=bc&bc:!𝔹;
	(bc&bc):=bcandbc;
	bcandn:=bc&n:!𝔹;
	(bc&n):=bcandn;
	bcandz:=bc&z:!𝔹;
	(bc&z):=bcandz;
	bcandq:=bc&q; /// error
	(bc&q):=bcandq; /// error
	bcandr:=bc&r; /// error
	(bc&r):=bcandr; /// error
	nandb:=n&b:𝔹;
	(n&b):=nandb;
	nands:=n&s:int[16];
	(n&s):=nands;
	nandu:=n&u:uint[16];
	(n&u):=nandu;
	nandsc:=n&sc:!int[16];
	(n&sc):=nandsc;
	nanduc:=n&uc:!uint[16];
	(n&uc):=nanduc;
	nandbc:=n&bc:!𝔹;
	(n&bc):=nandbc;
	nandn:=n&n:!ℕ;
	(n&n):=nandn;
	nandz:=n&z:!ℕ;
	(n&z):=nandz;
	nandq:=n&q; /// error
	(n&q):=nandq; /// error
	nandr:=n&r; /// error
	(n&r):=nandr; /// error
	zandb:=z&b:𝔹;
	(z&b):=zandb;
	zands:=z&s:int[16];
	(z&s):=zands;
	zandu:=z&u:uint[16];
	(z&u):=zandu;
	zandsc:=z&sc:!int[16];
	(z&sc):=zandsc;
	zanduc:=z&uc:!uint[16];
	(z&uc):=zanduc;
	zandbc:=z&bc:!𝔹;
	(z&bc):=zandbc;
	zandn:=z&n:!ℕ;
	(z&n):=zandn;
	zandz:=z&z:!ℤ;
	(z&z):=zandz;
	zandq:=z&q; /// error
	(z&q):=zandq; /// error
	zandr:=z&r; /// error
	(z&r):=zandr; /// error
	qandb:=q&b; /// error
	(q&b):=qandb; /// error
	qands:=q&s; /// error
	(q&s):=qands; /// error
	qandu:=q&u; /// error
	(q&u):=qandu; /// error
	qandsc:=q&sc; /// error
	(q&sc):=qandsc; /// error
	qanduc:=q&uc; /// error
	(q&uc):=qanduc; /// error
	qandbc:=q&bc; /// error
	(q&bc):=qandbc; /// error
	qandn:=q&n; /// error
	(q&n):=qandn; /// error
	qandz:=q&z; /// error
	(q&z):=qandz; /// error
	qandq:=q&q; /// error
	(q&q):=qandq; /// error
	qandr:=q&r; /// error
	(q&r):=qandr; /// error
	randb:=r&b; /// error
	(r&b):=randb; /// error
	rands:=r&s; /// error
	(r&s):=rands; /// error
	randu:=r&u; /// error
	(r&u):=randu; /// error
	randsc:=r&sc; /// error
	(r&sc):=randsc; /// error
	randuc:=r&uc; /// error
	(r&uc):=randuc; /// error
	randbc:=r&bc; /// error
	(r&bc):=randbc; /// error
	randn:=r&n; /// error
	(r&n):=randn; /// error
	randz:=r&z; /// error
	(r&z):=randz; /// error
	randq:=r&q; /// error
	(r&q):=randq; /// error
	randr:=r&r; /// error
	(r&r):=randr; /// error
	borb:=b|b:𝔹;
	(b|b):=borb;
	bors:=b|s:int[16];
	(b|s):=bors;
	boru:=b|u:uint[16];
	(b|u):=boru;
	borsc:=b|sc:int[16];
	(b|sc):=borsc;
	boruc:=b|uc:uint[16];
	(b|uc):=boruc;
	borbc:=b|bc:𝔹;
	(b|bc):=borbc;
	born:=b|n; /// error
	(b|n):=born; /// error
	borz:=b|z; /// error
	(b|z):=borz; /// error
	borq:=b|q; /// error
	(b|q):=borq; /// error
	borr:=b|r; /// error
	(b|r):=borr; /// error
	sorb:=s|b:int[16];
	(s|b):=sorb;
	sors:=s|s:int[16];
	(s|s):=sors;
	soru:=s|u; /// error
	(s|u):=soru; /// error
	sorsc:=s|sc:int[16];
	(s|sc):=sorsc;
	soruc:=s|uc; /// error
	(s|uc):=soruc; /// error
	sorbc:=s|bc:int[16];
	(s|bc):=sorbc;
	sorn:=s|n:int[16];
	(s|n):=sorn;
	sorz:=s|z:int[16];
	(s|z):=sorz;
	sorq:=s|q; /// error
	(s|q):=sorq; /// error
	sorr:=s|r; /// error
	(s|r):=sorr; /// error
	uorb:=u|b:uint[16];
	(u|b):=uorb;
	uors:=u|s; /// error
	(u|s):=uors; /// error
	uoru:=u|u:uint[16];
	(u|u):=uoru;
	uorsc:=u|sc; /// error
	(u|sc):=uorsc; /// error
	uoruc:=u|uc:uint[16];
	(u|uc):=uoruc;
	uorbc:=u|bc:uint[16];
	(u|bc):=uorbc;
	uorn:=u|n:uint[16];
	(u|n):=uorn;
	uorz:=u|z:uint[16];
	(u|z):=uorz;
	uorq:=u|q; /// error
	(u|q):=uorq; /// error
	uorr:=u|r; /// error
	(u|r):=uorr; /// error
	scorb:=sc|b:int[16];
	(sc|b):=scorb;
	scors:=sc|s:int[16];
	(sc|s):=scors;
	scoru:=sc|u; /// error
	(sc|u):=scoru; /// error
	scorsc:=sc|sc:!int[16];
	(sc|sc):=scorsc;
	scoruc:=sc|uc; /// error
	(sc|uc):=scoruc; /// error
	scorbc:=sc|bc:!int[16];
	(sc|bc):=scorbc;
	scorn:=sc|n:!int[16];
	(sc|n):=scorn;
	scorz:=sc|z:!int[16];
	(sc|z):=scorz;
	scorq:=sc|q; /// error
	(sc|q):=scorq; /// error
	scorr:=sc|r; /// error
	(sc|r):=scorr; /// error
	ucorb:=uc|b:uint[16];
	(uc|b):=ucorb;
	ucors:=uc|s; /// error
	(uc|s):=ucors; /// error
	ucoru:=uc|u:uint[16];
	(uc|u):=ucoru;
	ucorsc:=uc|sc; /// error
	(uc|sc):=ucorsc; /// error
	ucoruc:=uc|uc:!uint[16];
	(uc|uc):=ucoruc;
	ucorbc:=uc|bc:!uint[16];
	(uc|bc):=ucorbc;
	ucorn:=uc|n:!uint[16];
	(uc|n):=ucorn;
	ucorz:=uc|z:!uint[16];
	(uc|z):=ucorz;
	ucorq:=uc|q; /// error
	(uc|q):=ucorq; /// error
	ucorr:=uc|r; /// error
	(uc|r):=ucorr; /// error
	bcorb:=bc|b:𝔹;
	(bc|b):=bcorb;
	bcors:=bc|s:int[16];
	(bc|s):=bcors;
	bcoru:=bc|u:uint[16];
	(bc|u):=bcoru;
	bcorsc:=bc|sc:!int[16];
	(bc|sc):=bcorsc;
	bcoruc:=bc|uc:!uint[16];
	(bc|uc):=bcoruc;
	bcorbc:=bc|bc:!𝔹;
	(bc|bc):=bcorbc;
	bcorn:=bc|n:!ℕ;
	(bc|n):=bcorn;
	bcorz:=bc|z:!ℤ;
	(bc|z):=bcorz;
	bcorq:=bc|q; /// error
	(bc|q):=bcorq; /// error
	bcorr:=bc|r; /// error
	(bc|r):=bcorr; /// error
	norb:=n|b; /// error
	(n|b):=norb; /// error
	nors:=n|s:int[16];
	(n|s):=nors;
	noru:=n|u:uint[16];
	(n|u):=noru;
	norsc:=n|sc:!int[16];
	(n|sc):=norsc;
	noruc:=n|uc:!uint[16];
	(n|uc):=noruc;
	norbc:=n|bc:!ℕ;
	(n|bc):=norbc;
	norn:=n|n:!ℕ;
	(n|n):=norn;
	norz:=n|z:!ℤ;
	(n|z):=norz;
	norq:=n|q; /// error
	(n|q):=norq; /// error
	norr:=n|r; /// error
	(n|r):=norr; /// error
	zorb:=z|b; /// error
	(z|b):=zorb; /// error
	zors:=z|s:int[16];
	(z|s):=zors;
	zoru:=z|u:uint[16];
	(z|u):=zoru;
	zorsc:=z|sc:!int[16];
	(z|sc):=zorsc;
	zoruc:=z|uc:uint[16];
	(z|uc):=zoruc;
	zorbc:=z|bc:!ℤ;
	(z|bc):=zorbc;
	zorn:=z|n:!ℤ;
	(z|n):=zorn;
	zorz:=z|z:!ℤ;
	(z|z):=zorz;
	zorq:=z|q; /// error
	(z|q):=zorq; /// error
	zorr:=z|r; /// error
	(z|r):=zorr; /// error
	qorb:=q|b; /// error
	(q|b):=qorb; /// error
	qors:=q|s; /// error
	(q|s):=qors; /// error
	qoru:=q|u; /// error
	(q|u):=qoru; /// error
	qorsc:=q|sc; /// error
	(q|sc):=qorsc; /// error
	qoruc:=q|uc; /// error
	(q|uc):=qoruc; /// error
	qorbc:=q|bc; /// error
	(q|bc):=qorbc; /// error
	qorn:=q|n; /// error
	(q|n):=qorn; /// error
	qorz:=q|z; /// error
	(q|z):=qorz; /// error
	qorq:=q|q; /// error
	(q|q):=qorq; /// error
	qorr:=q|r; /// error
	(q|r):=qorr; /// error
	rorb:=r|b; /// error
	(r|b):=rorb; /// error
	rors:=r|s; /// error
	(r|s):=rors; /// error
	roru:=r|u; /// error
	(r|u):=roru; /// error
	rorsc:=r|sc; /// error
	(r|sc):=rorsc; /// error
	roruc:=r|uc; /// error
	(r|uc):=roruc; /// error
	rorbc:=r|bc; /// error
	(r|bc):=rorbc; /// error
	rorn:=r|n; /// error
	(r|n):=rorn; /// error
	rorz:=r|z; /// error
	(r|z):=rorz; /// error
	rorq:=r|q; /// error
	(r|q):=rorq; /// error
	rorr:=r|r; /// error
	(r|r):=rorr; /// error
	bxorb:=b⊕b:𝔹;
	(b⊕b):=bxorb;
	bxors:=b⊕s:int[16];
	(b⊕s):=bxors;
	bxoru:=b⊕u:uint[16];
	(b⊕u):=bxoru;
	bxorsc:=b⊕sc:int[16];
	(b⊕sc):=bxorsc; 
	bxoruc:=b⊕uc:uint[16];
	(b⊕uc):=bxoruc;
	bxorbc:=b⊕bc:𝔹;
	(b⊕bc):=bxorbc;
	bxorn:=b⊕n; /// error
	(b⊕n):=bxorn; /// error
	bxorz:=b⊕z; /// error
	(b⊕z):=bxorz; /// error
	bxorq:=b⊕q; /// error
	(b⊕q):=bxorq; /// error
	bxorr:=b⊕r; /// error
	(b⊕r):=bxorr; /// error
	sxorb:=s⊕b:int[16];
	(s⊕b):=sxorb;
	sxors:=s⊕s:int[16];
	(s⊕s):=sxors;
	sxoru:=s⊕u; /// error
	(s⊕u):=sxoru; /// error
	sxorsc:=s⊕sc:int[16];
	(s⊕sc):=sxorsc;
	sxoruc:=s⊕uc; /// error
	(s⊕uc):=sxoruc; /// error
	sxorbc:=s⊕bc:int[16];
	(s⊕bc):=sxorbc;
	sxorn:=s⊕n:int[16];
	(s⊕n):=sxorn;
	sxorz:=s⊕z:int[16];
	(s⊕z):=sxorz;
	sxorq:=s⊕q; /// error
	(s⊕q):=sxorq; /// error
	sxorr:=s⊕r; /// error
	(s⊕r):=sxorr; /// error
	uxorb:=u⊕b:uint[16];
	(u⊕b):=uxorb;
	uxors:=u⊕s; /// error
	(u⊕s):=uxors; /// error
	uxoru:=u⊕u:uint[16];
	(u⊕u):=uxoru;
	uxorsc:=u⊕sc; /// error
	(u⊕sc):=uxorsc; /// error
	uxoruc:=u⊕uc:uint[16];
	(u⊕uc):=uxoruc;
	uxorbc:=u⊕bc:uint[16];
	(u⊕bc):=uxorbc;
	uxorn:=u⊕n:uint[16];
	(u⊕n):=uxorn;
	uxorz:=u⊕z:uint[16];
	(u⊕z):=uxorz;
	uxorq:=u⊕q; /// error
	(u⊕q):=uxorq; /// error
	uxorr:=u⊕r; /// error
	(u⊕r):=uxorr; /// error
	scxorb:=sc⊕b:int[16];
	(sc⊕b):=scxorb;
	scxors:=sc⊕s:int[16];
	(sc⊕s):=scxors;
	scxoru:=sc⊕u; /// error
	(sc⊕u):=scxoru; /// error
	scxorsc:=sc⊕sc:!int[16];
	(sc⊕sc):=scxorsc;
	scxoruc:=sc⊕uc; /// error
	(sc⊕uc):=scxoruc; /// error
	scxorbc:=sc⊕bc:!int[16];
	(sc⊕bc):=scxorbc;
	scxorn:=sc⊕n:!int[16];
	(sc⊕n):=scxorn;
	scxorz:=sc⊕z:!int[16];
	(sc⊕z):=scxorz;
	scxorq:=sc⊕q; /// error
	(sc⊕q):=scxorq; /// error
	scxorr:=sc⊕r; /// error
	(sc⊕r):=scxorr; /// error
	ucxorb:=uc⊕b:uint[16];
	(uc⊕b):=ucxorb;
	ucxors:=uc⊕s; /// error
	(uc⊕s):=ucxors; /// error
	ucxoru:=uc⊕u:uint[16];
	(uc⊕u):=ucxoru;
	ucxorsc:=uc⊕sc; /// error
	(uc⊕sc):=ucxorsc; /// error
	ucxoruc:=uc⊕uc:!uint[16];
	(uc⊕uc):=ucxoruc;
	ucxorbc:=uc⊕bc:!uint[16];
	(uc⊕bc):=ucxorbc;
	ucxorn:=uc⊕n:!uint[16];
	(uc⊕n):=ucxorn;
	ucxorz:=uc⊕z:!uint[16];
	(uc⊕z):=ucxorz;
	ucxorq:=uc⊕q; /// error
	(uc⊕q):=ucxorq; /// error
	ucxorr:=uc⊕r; /// error
	(uc⊕r):=ucxorr; /// error
	bcxorb:=bc⊕b:𝔹;
	(bc⊕b):=bcxorb;
	bcxors:=bc⊕s:int[16];
	(bc⊕s):=bcxors;
	bcxoru:=bc⊕u:uint[16];
	(bc⊕u):=bcxoru;
	bcxorsc:=bc⊕sc:!int[16];
	(bc⊕sc):=bcxorsc;
	bcxoruc:=bc⊕uc:!uint[16];
	(bc⊕uc):=bcxoruc;
	bcxorbc:=bc⊕bc:!𝔹;
	(bc⊕bc):=bcxorbc;
	bcxorn:=bc⊕n:!ℕ;
	(bc⊕n):=bcxorn;
	bcxorz:=bc⊕z:!ℤ;
	(bc⊕z):=bcxorz;
	bcxorq:=bc⊕q; /// error
	(bc⊕q):=bcxorq; /// error
	bcxorr:=bc⊕r; /// error
	(bc⊕r):=bcxorr; /// error
	nxorb:=n⊕b; /// error
	(n⊕b):=nxorb; /// error
	nxors:=n⊕s:int[16];
	(n⊕s):=nxors;
	nxoru:=n⊕u:uint[16];
	(n⊕u):=nxoru;
	nxorsc:=n⊕sc:!int[16];
	(n⊕sc):=nxorsc;
	nxoruc:=n⊕uc:!uint[16];
	(n⊕uc):=nxoruc;
	nxorbc:=n⊕bc:!ℕ;
	(n⊕bc):=nxorbc;
	nxorn:=n⊕n:!ℕ;
	(n⊕n):=nxorn;
	nxorz:=n⊕z:!ℤ;
	(n⊕z):=nxorz;
	nxorq:=n⊕q; /// error
	(n⊕q):=nxorq; /// error
	nxorr:=n⊕r; /// error
	(n⊕r):=nxorr; /// error
	zxorb:=z⊕b; /// error
	(z⊕b):=zxorb; /// error
	zxors:=z⊕s:int[16];
	(z⊕s):=zxors;
	zxoru:=z⊕u:uint[16];
	(z⊕u):=zxoru;
	zxorsc:=z⊕sc:!int[16];
	(z⊕sc):=zxorsc;
	zxoruc:=z⊕uc:!uint[16];
	(z⊕uc):=zxoruc;
	zxorbc:=z⊕bc:!ℤ;
	(z⊕bc):=zxorbc;
	zxorn:=z⊕n:!ℤ;
	(z⊕n):=zxorn;
	zxorz:=z⊕z:!ℤ;
	(z⊕z):=zxorz;
	zxorq:=z⊕q; /// error
	(z⊕q):=zxorq; /// error
	zxorr:=z⊕r; /// error
	(z⊕r):=zxorr; /// error
	qxorb:=q⊕b; /// error
	(q⊕b):=qxorb; /// error
	qxors:=q⊕s; /// error
	(q⊕s):=qxors; /// error
	qxoru:=q⊕u; /// error
	(q⊕u):=qxoru; /// error
	qxorsc:=q⊕sc; /// error
	(q⊕sc):=qxorsc; /// error
	qxoruc:=q⊕uc; /// error
	(q⊕uc):=qxoruc; /// error
	qxorbc:=q⊕bc; /// error
	(q⊕bc):=qxorbc; /// error
	qxorn:=q⊕n; /// error
	(q⊕n):=qxorn; /// error
	qxorz:=q⊕z; /// error
	(q⊕z):=qxorz; /// error
	qxorq:=q⊕q; /// error
	(q⊕q):=qxorq; /// error
	qxorr:=q⊕r; /// error
	(q⊕r):=qxorr; /// error
	rxorb:=r⊕b; /// error
	(r⊕b):=rxorb; /// error
	rxors:=r⊕s; /// error
	(r⊕s):=rxors; /// error
	rxoru:=r⊕u; /// error
	(r⊕u):=rxoru; /// error
	rxorsc:=r⊕sc; /// error
	(r⊕sc):=rxorsc; /// error
	rxoruc:=r⊕uc; /// error
	(r⊕uc):=rxoruc; /// error
	rxorbc:=r⊕bc; /// error
	(r⊕bc):=rxorbc; /// error
	rxorn:=r⊕n; /// error
	(r⊕n):=rxorn; /// error
	rxorz:=r⊕z; /// error
	(r⊕z):=rxorz; /// error
	rxorq:=r⊕q; /// error
	(r⊕q):=rxorq; /// error
	rxorr:=r⊕r; /// error
	(r⊕r):=rxorr; /// error
}
